--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,9 +9,9 @@ sites:
   - name: Repository
     url: https://repo.ejiek.com
   - name: Data Center B
-    url: $DC_B
+    url: $SECRET_SITE_1
   - name: Data Center V
-    url: $DC_V
+    url: $SECRET_SITE_2
 
 status-website:
   # Add your custom domain below, or remove the next line if you don't have a domain
